<resources>

    <string name="app_name">purrrfectPOI</string>
    <string name="login_lbl_header_login">Iniciar sesión</string>
    <string name="login_lbl_email">Email:</string>
    <string name="login_lbl_pw">Contraseña:</string>
    <string name="login_btn_login">Iniciar Sesión</string>
    <string name="login_lbl_registrarse">¿No tienes una cuenta? Registrate aqui</string>

    <string name="register_lbl_header_register">Nuevo usuario</string>
    <string name="register_lbl_email">Email:</string>
    <string name="register_lbl_pw">Contraseña:</string>
    <string name="register_lbl_nombre">Nombre:</string>
    <string name="register_lbl_ap_paterno">Ap. Paterno:</string>
    <string name="register_lbl_ap_materno">Ap. Materno:</string>
    <string name="register_lbl_carrera">Carrera:</string>
    <string name="register_btn_register">Registrarse</string>
    <string name="register_lbl_logguearse">¿Ya tienes una cuenta? Inicia sesion</string>

    <string name="profile_lbl_correo">Correo@correo.com</string>
    <string name="profile_lbl_carrera">Carrera</string>
    <string name="profile_lbl_medallas">Medallas ganadas:</string>
    <string name="profile_btn_editar">Editar</string>

    <string name="tasks_lbl_tareas">TAREAS</string>
    <string name="tasks_name_tarea">NOMBRE DE LA TAREA</string>
    <string name="tasks_date_tarea">FECHA DE VENCIMIENTO</string>
    <string name="tasks_archive_tarea"><u>Nombre_del_Archivo.doc</u></string>

    <string-array name="Carreras">
        <item>LMAD</item>
        <item>LCC</item>
        <item>LA</item>
        <item>LSTI</item>
        <item>LM</item>
        <item>LF</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>

</resources>