<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/cuadricula"
    tools:context=".MainActivity">

    <View
        android:id="@+id/register_header_back"
        android:layout_width="60dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/header_with_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/register_header_back"
        app:layout_constraintEnd_toEndOf="@+id/register_header_back"
        app:layout_constraintStart_toStartOf="@+id/register_header_back"
        app:layout_constraintTop_toTopOf="@+id/register_header_back"
        app:srcCompat="@drawable/ic_box_arrow_left_white" />

    <TextView
        android:id="@+id/lbl_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/register_lbl_header_register"
        android:textColor="@color/coffee"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/register_header_back"
        app:layout_constraintStart_toEndOf="@+id/register_header_back"
        app:layout_constraintTop_toTopOf="@+id/register_header_back" />

    <EditText
        android:id="@+id/register_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/search_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/register_lbl_pw"
        android:textColor="@color/coffee"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_input_pw"
        app:layout_constraintStart_toStartOf="@+id/register_input_pw" />

    <TextView
        android:id="@+id/lbl_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/register_lbl_nombre"
        android:textColor="@color/coffee"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_input_nombre"
        app:layout_constraintStart_toStartOf="@+id/register_input_nombre" />

    <TextView
        android:id="@+id/lbl_pw3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/register_lbl_ap_paterno"
        android:textColor="@color/coffee"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_input_ap_paterno"
        app:layout_constraintStart_toStartOf="@+id/register_input_ap_paterno" />

    <TextView
        android:id="@+id/lbl_pw5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/register_lbl_carrera"
        android:textColor="@color/coffee"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_spinner_carreras"
        app:layout_constraintStart_toStartOf="@+id/register_spinner_carreras" />

    <TextView
        android:id="@+id/lbl_pw4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/register_lbl_ap_materno"
        android:textColor="@color/coffee"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_input_ap_materno"
        app:layout_constraintStart_toStartOf="@+id/register_input_ap_materno" />

    <EditText
        android:id="@+id/register_input_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/search_background"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_input_email" />

    <EditText
        android:id="@+id/register_input_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/search_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_input_pw" />

    <EditText
        android:id="@+id/register_input_ap_materno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/search_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/register_input_ap_paterno"
        app:layout_constraintTop_toTopOf="@+id/register_input_ap_paterno" />

    <EditText
        android:id="@+id/register_input_ap_paterno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/search_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/register_input_ap_materno"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_input_nombre" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/button_with_border"
        android:text="@string/register_btn_register"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_spinner_carreras" />

    <TextView
        android:id="@+id/register_lbl_logguearse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_lbl_logguearse"
        android:textColor="@color/coffee"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn_register" />

    <TextView
        android:id="@+id/lbl_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/register_lbl_email"
        android:textColor="@color/coffee"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_input_email"
        app:layout_constraintStart_toStartOf="@+id/register_input_email" />

    <Spinner
        android:id="@+id/register_spinner_carreras"
        style="@style/font_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_input_ap_paterno"
        android:padding="8dp"
        android:textColor="@color/coffee"

        />
    <!--
        <Spinner
            android:id="@+id/register_spinner_carreras2"
            android:layout_width="353dp"
            android:layout_height="31dp"
            android:layout_marginTop="75dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_input_ap_paterno" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="Selecciona un aopcion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:id="@+id/auto_complete_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

    -->

</androidx.constraintlayout.widget.ConstraintLayout>
